--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Praven</title>
   </head>
   <body>
-
+<h1>Hello, Code School!</h1>
+<ul>Spring</ul>
+<ul>Angular</ul>
+<li>A</li>
+<li>B</li>
+<li>C</li>
+<ul>Mvc</ul>
   </body>
 </html>
